--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-handlebars": "^5.3.2",
     "helpers": "0.0.6",
     "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "node": "^16.1.0",
     "sequelize": "^6.6.2",
     "session": "^0.1.0"
