--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
     "helpers": "0.0.6",
+    "heroku": "^7.54.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.2.5",
     "node": "^16.1.0",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
   "repository": {
